--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -109,7 +109,6 @@
     <Compile Include="Assets\Spine Examples\Scripts\SpawnFromSkeletonDataExample.cs" />
     <Compile Include="Assets\Spine\spine-unity\Mesh Generation\Unused\ISubmeshedMeshGenerator.cs" />
     <Compile Include="Assets\Scrips\MenuGame\SpinHero.cs" />
-    <Compile Include="Assets\Scrips\Data\DataNV2.cs" />
     <Compile Include="Assets\Spine\spine-csharp\Atlas.cs" />
     <Compile Include="Assets\Spine Examples\Scripts\AttackSpineboy.cs" />
     <Compile Include="Assets\Spine\spine-unity\Mesh Generation\Unused\ArraysSubmeshSetMeshGenerator.cs" />
@@ -129,12 +128,11 @@
     <Compile Include="Assets\Spine\spine-unity\Mesh Generation\Unused\DoubleBufferedMesh.cs" />
     <Compile Include="Assets\Spine\spine-unity\Modules\SkeletonUtility Modules\SkeletonUtilityGroundConstraint.cs" />
     <Compile Include="Assets\Spine\spine-unity\Mesh Generation\Unused\ISimpleMeshGenerator.cs" />
+    <Compile Include="Assets\Scrips\Data\DataCadic.cs" />
     <Compile Include="Assets\Spine\spine-unity\Asset Types\AnimationReferenceAsset.cs" />
     <Compile Include="Assets\Spine\spine-unity\Modules\SlotBlendModes\SlotBlendModes.cs" />
     <Compile Include="Assets\Spine\spine-unity\Mesh Generation\Unused\ArraysMeshGenerator.cs" />
-    <Compile Include="Assets\Scrips\MenuGame\MainGame.cs" />
     <Compile Include="Assets\Spine Examples\Scripts\Sample Components\SkeletonColorInitialize.cs" />
-    <Compile Include="Assets\Scrips\Data\DataNV4.cs" />
     <Compile Include="Assets\Spine\spine-unity\Modules\Timeline\SpineAnimationState\SpineAnimationStateClip.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ChatController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ObjectSpin.cs" />
@@ -158,6 +156,7 @@
     <Compile Include="Assets\Scrips\AttackArea.cs" />
     <Compile Include="Assets\Spine\spine-csharp\SlotData.cs" />
     <Compile Include="Assets\Spine Examples\Scripts\Getting Started Scripts\SpineboyBeginnerInput.cs" />
+    <Compile Include="Assets\Scrips\Data\DataCalic.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_DigitValidator.cs" />
     <Compile Include="Assets\Spine\spine-unity\Modules\Timeline\SpineSkeletonFlip\SpineSkeletonFlipBehaviour.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_FrameRateCounter.cs" />
@@ -175,6 +174,7 @@
     <Compile Include="Assets\Spine\spine-unity\Modules\SkeletonGraphic\SkeletonGraphic.cs" />
     <Compile Include="Assets\textt.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_UiFrameRateCounter.cs" />
+    <Compile Include="Assets\Scrips\Data\DataVegito.cs" />
     <Compile Include="Assets\Spine Examples\Scripts\SpineGauge.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshSpawner.cs" />
@@ -227,6 +227,7 @@
     <Compile Include="Assets\Spine Examples\Scripts\Sample Components\BoneLocalOverride.cs" />
     <Compile Include="Assets\Spine\spine-unity\SpineAttributes.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ShaderPropAnimator.cs" />
+    <Compile Include="Assets\Scrips\Data\DataGoku.cs" />
     <Compile Include="Assets\Spine Examples\Scripts\MaterialPropertyBlockExample.cs" />
     <Compile Include="Assets\Spine\spine-csharp\Slot.cs" />
     <Compile Include="Assets\Spine\spine-unity\Components\SkeletonAnimator.cs" />
@@ -234,19 +235,18 @@
     <Compile Include="Assets\Spine\spine-csharp\SkeletonData.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
     <Compile Include="Assets\Spine Examples\Scripts\SpineboyFacialExpression.cs" />
-    <Compile Include="Assets\Scrips\Data\DataNV1.cs" />
     <Compile Include="Assets\Spine\spine-csharp\Attachments\MeshAttachment.cs" />
     <Compile Include="Assets\Spine\spine-csharp\Attachments\BoundingBoxAttachment.cs" />
     <Compile Include="Assets\Spine\spine-csharp\TransformConstraint.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark03.cs" />
     <Compile Include="Assets\Scrips\Charactor.cs" />
-    <Compile Include="Assets\Scrips\Data\DataNV3.cs" />
     <Compile Include="Assets\Spine\spine-unity\Asset Types\RegionlessAttachmentLoader.cs" />
     <Compile Include="Assets\Scrips\Data\DataPlayer.cs" />
     <Compile Include="Assets\Spine\spine-csharp\Attachments\PathAttachment.cs" />
     <Compile Include="Assets\Spine\spine-unity\Components\PointFollower.cs" />
     <Compile Include="Assets\Scrips\Data\PropertiesPlayer.cs" />
     <Compile Include="Assets\Scrips\MenuGame\HomeUI.cs" />
+    <Compile Include="Assets\Scrips\Data\DataGohan.cs" />
     <Compile Include="Assets\Spine\spine-unity\Modules\Ghost\SkeletonGhostRenderer.cs" />
     <Compile Include="Assets\Scrips\Spinner.cs" />
     <Compile Include="Assets\Spine Examples\Scripts\Sample Components\Legacy\CustomSkin.cs" />
