Sử lí button GameController theo scrip của nhân vật đang chọn + hoàn thiện dữ liễu phần gameOver (chưa làm hiệu ứng)

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexZoom.cs" />
     <Compile Include="Assets\Spine\spine-unity\Modules\SkeletonRenderSeparator\SkeletonPartsRenderer.cs" />
     <Compile Include="Assets\Spine\spine-csharp\Skin.cs" />
+    <Compile Include="Assets\Scrips\MenuGame\ScrollViewLevel.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark02.cs" />
     <Compile Include="Assets\Spine\spine-csharp\Attachments\AttachmentType.cs" />
     <Compile Include="Assets\Spine\spine-unity\SkeletonUtility\SkeletonUtility.cs" />
